# functional-modularity-from-activation-patterns-only

./: README.md  exp_runner_fmnist.sh  exp_runner_mnist.sh  install-fedora.sh  install.sh  report.py  report_v0.py  requirements.txt
experiments/: report_experiment.py  run_experiment.py
modularnet/: pyproject.toml
modularnet/src/dataprovider/: dataprovider.py  example_models.py
modularnet/src/examples/: main_demo.py  main_fashion_mnist.py  main_fashion_mnist_cnn.py  main_gpt2.py  main_iris.py  main_mnist.py  test_cluster.py  test_density.py  test_multiprocess.py  test_tab_datasets.py
modularnet/src/modularnet/: modularcluster.py  modulareditor.py  modularloss.py  modularobserver.py  modularobserverconv.py  modularspace.py  modularspacevisualizer.py  modularstats.py  modularstep.py
modularnet/src/modularnet/metamodel/: experiment.py  metamodel.py  metamodelconfig.py  metrics.py
modularnet/src/utils/: logger.py  utils.py
old/dataprovider.old/: ax_search.py  dataprovider.py  gpt2.py  iris.py  mnist.py  mnist_fashion.py
old/dataprovider.old/old/: modularspace.old.py  stangevisualizer.old.py
